src/test/ui/continue-after-missing-main.nll.stderr
error[E0601]: `main` function not found in crate `continue_after_missing_main`
  --> $DIR/continue-after-missing-main.rs:1:1
   |
LL | / #![allow(dead_code)]
LL | |
LL | | struct Tableau<'a, MP> {
LL | |     provider: &'a MP,
...  |
LL | |
LL | | }
   | |_^ consider adding a `main` function to `$DIR/continue-after-missing-main.rs`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0601`.
